feat() : update some style

--- a/NoDecentDiary/Pages/PageHistory.razor
+++ b/NoDecentDiary/Pages/PageHistory.razor
@@ -50,7 +50,7 @@
                            ExpandIcon="mdi-chevron-down">
                 </MTreeview>
             </div>
-            <div class="flex-grow-1 px-5">
+            <div class="flex-grow-1 ml-2">
                 <DiaryCardList Value="TreeDiaries"></DiaryCardList>
             </div>
         </div>
