--- a/NoDecentDiary/Shared/DiaryCardList.razor
+++ b/NoDecentDiary/Shared/DiaryCardList.razor
@@ -1,4 +1,4 @@
-﻿<div class="d-flex justify-space-between flex-wrap">
+﻿<div class="d-flex justify-space-between flex-wrap @(Class)">
     @foreach (var item in Value!)
     {
         if (item.Top)
