--- a/NoDecentDiary/Pages/PageSearch.razor
+++ b/NoDecentDiary/Pages/PageSearch.razor
@@ -17,7 +17,7 @@
                 Clearable
                 HideDetails="@("auto")"
                 spellcheck="false"
-                Placeholder="请输入日记关键词">
+                Placeholder="@(I18n!.T("Search.Placeholder"))">
     </MTextField>
 
 </MAppBar>
