--- a/NoDecentDiary/Shared/TagCard.razor
+++ b/NoDecentDiary/Shared/TagCard.razor
@@ -31,13 +31,13 @@
                             <MListItem Dense
                                        OnClick="OnRename">
                                 <MListItemContent>
-                                    重命名
+                                    @(I18n!.T("Share.Rename"))
                                 </MListItemContent>
                             </MListItem>
                             <MListItem Dense
                                        OnClick="OnDelete">
                                 <MListItemContent>
-                                    删除
+                                    @(I18n!.T("Share.Delete"))
                                 </MListItemContent>
                             </MListItem>
                         </MList>
