--- a/NoDecentDiary/Pages/PageWrite.razor
+++ b/NoDecentDiary/Pages/PageWrite.razor
@@ -58,7 +58,9 @@
     <MContainer>
         <div class="px-3 text-h6 font-weight-bold">
             <span>@(Diary.CreateTime.ToString("yyyy/MM/dd"))</span>
-            <span class="pl-5 text-subtitle-1">@(Diary.CreateTime.DayOfWeek.ToChinese2())</span>
+            <span class="pl-5 text-subtitle-1">
+                @(Diary.CreateTime.ToWeek(I18n))
+            </span>
         </div>
         <div class="px-2">
             <MChip Class="my-2 mr-2"
