--- a/NoDecentDiary/Shared/InputTag.razor
+++ b/NoDecentDiary/Shared/InputTag.razor
@@ -19,18 +19,18 @@
                         Counter="20"
                         maxlength="20"
                         spellcheck="false"
-                        Placeholder="请输入标签名称">
+                        Placeholder="@(I18n!.T("Tag.Placeholder"))">
             </MTextField>
         </MCardText>
         <MCardActions>
             <MSpacer></MSpacer>
             <MButton Text OnClick="HandleOnCancel">
-                取消
+                @(I18n!.T("Share.Cancel"))
             </MButton>
             <MButton Text
                      Color="primary"
                      OnClick="HandleOnSave">
-                保存
+                @(I18n!.T("Share.Save"))
             </MButton>
         </MCardActions>
     </MCard>
