--- a/NoDecentDiary/Shared/SelectTags.razor
+++ b/NoDecentDiary/Shared/SelectTags.razor
@@ -4,7 +4,7 @@
          Scrollable>
     <MCard>
         <MCardTitle Class="font-weight-bold">
-            选择标签
+            @(I18n!.T("Tag.Select"))
             <MSpacer></MSpacer>
             <MButton Icon OnClick="HandleOnCancel">
                 <MIcon>mdi-close</MIcon>
@@ -25,16 +25,16 @@
         </MCardText>
         <MCardActions>
             <MButton Text OnClick="()=>ShowAddTag = true">
-                添加标签
+                @(I18n!.T("Tag.Add"))
             </MButton>
             <MSpacer></MSpacer>
             <MButton Text OnClick="HandleOnCancel">
-                取消
+                @(I18n!.T("Share.Cancel"))
             </MButton>
             <MButton Text
                      Color="primary"
                      OnClick="HandleOnSave">
-                保存
+                @(I18n!.T("Share.Save"))
             </MButton>
         </MCardActions>
     </MCard>
@@ -42,6 +42,6 @@
 
 <InputTag @bind-Value="ShowAddTag"
           @bind-Text="AddTagName"
-          Title="添加标签"
+          Title="@(I18n!.T("Tag.Add"))"
           OnSave="HandleOnSaveAddTag">
 </InputTag>
