--- a/NoDecentDiary/Pages/PageWrite.razor
+++ b/NoDecentDiary/Pages/PageWrite.razor
@@ -41,12 +41,12 @@
                 <MListItem Dense
                            OnClick="()=>showTitle = !showTitle">
                     <MListItemContent>
-                        @(showTitle ? "关闭标题" : "开启标题")
+                        @(showTitle ? I18n!.T("Write.CloseTitle") : I18n!.T("Write.OpenTitle"))
                     </MListItemContent>
                 </MListItem>
                 <MListItem Dense>
                     <MListItemContent>
-                        切换至富文本
+                        @(I18n!.T("Write.RichText"))
                     </MListItemContent>
                 </MListItem>
             </MList>
@@ -69,7 +69,7 @@
                 <MIcon Left>
                     @(GetWeatherIcon(Diary.Weather))
                 </MIcon>
-                @(string.IsNullOrEmpty(Diary.Weather) ? "天气" : Diary.Weather)
+                @Weather
             </MChip>
             <MChip Class="my-2 mr-2"
                    Outlined="Mobile"
@@ -77,7 +77,7 @@
                 <MIcon Left>
                     @(GetMoodIcon(Diary.Mood))
                 </MIcon>
-                @(string.IsNullOrEmpty(Diary.Mood) ? "心情" : Diary.Mood)
+                @Mood
             </MChip>
             <MChip Class="my-2 mr-2"
                    Outlined="Mobile"
@@ -85,7 +85,7 @@
                 <MIcon Left>
                     mdi-map-marker-outline
                 </MIcon>
-                @(string.IsNullOrEmpty(Diary.Location) ? "位置" : Diary.Location)
+                @(Diary.Location ?? I18n!.T("Write.Location"))
             </MChip>
         </div>
 
@@ -101,7 +101,7 @@
                     Dense
                     spellcheck="false"
                     maxlength="20"
-                    Placeholder="请输入标题">
+                    Placeholder="@(I18n!.T("Write.TitlePlace"))">
             </MTextField>
         }
 
@@ -117,9 +117,9 @@
                    RowHeight="30"
                    Counter="true"
                    spellcheck="false"
-                   Placeholder="请输入内容">
+                   Placeholder="@(I18n!.T("Write.ContentPlace"))">
             <CounterContent>
-                <MCounter Value="@((Diary.Content??"").Length + "字")"></MCounter>
+                <MCounter Value="@CounterValue(Diary.Content)"></MCounter>
             </CounterContent>
         </MTextarea>
 
@@ -142,13 +142,13 @@
                      Rounded
                      Dark
                      OnClick="HandOnSave">
-                保存
+                @(I18n!.T("Share.Save"))
             </MButton>
             <MButton Class="px-8"
                      Rounded
                      Outlined
                      OnClick="HandOnClear">
-                清除
+                @(I18n!.T("Share.Clear"))
             </MButton>
         </div>
     </MContainer>
@@ -164,13 +164,13 @@
          Scrollable>
     <MCard>
         <MCardTitle Class="font-weight-bold">
-            选择天气
+            @(I18n!.T("Write.SelectWeather"))
             <MSpacer></MSpacer>
             <MButton Icon OnClick="()=>ShowWeather=false">
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText Class="scroll-show" Style="max-height:200px;">
+        <MCardText Class="scroll-show pb-0 mb-5" Style="max-height:200px;">
             <MChipGroup @bind-Value="WeatherIndex" Column>
                 @foreach (var item in WeatherIcons)
                 {
@@ -179,7 +179,7 @@
                         <MIcon Left>
                             @(item.Value)
                         </MIcon>
-                        @(item.Key)
+                        @(I18n!.T("Weather." + item.Key))
                     </MChip>
                 }
             </MChipGroup>
@@ -191,13 +191,13 @@
          Scrollable>
     <MCard>
         <MCardTitle Class="font-weight-bold">
-            选择心情
+            @(I18n!.T("Write.SelectMood"))
             <MSpacer></MSpacer>
             <MButton Icon OnClick="()=>ShowMood=false">
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText Class="scroll-show" Style="max-height:200px;">
+        <MCardText Class="scroll-show pb-0 mb-5" Style="max-height:200px;">
             <MChipGroup @bind-Value="MoodIndex" Column>
                 @foreach (var item in MoodIcons)
                 {
@@ -206,7 +206,7 @@
                         <MIcon Left>
                             @(item.Value)
                         </MIcon>
-                        @(item.Key)
+                        @(I18n!.T("Mood." + item.Key))
                     </MChip>
                 }
             </MChipGroup>
@@ -218,7 +218,7 @@
          MaxWidth="420">
     <MCard>
         <MCardTitle Class="font-weight-bold">
-            输入位置
+            @(I18n!.T("Write.InputLocation"))
             <MSpacer></MSpacer>
             <MButton Icon OnClick="()=>ShowLocation=false">
                 <MIcon>mdi-close</MIcon>
@@ -232,7 +232,7 @@
                         Outlined
                         Counter="50"
                         maxlength="50"
-                        Placeholder="请输入位置">
+                        Placeholder="@(I18n!.T("Write.LocationPlace"))">
             </MTextField>
         </MCardText>
     </MCard>
