fix(PopuService) : fix PopuService Tomast position in mobile

--- a/NoDecentDiary/wwwroot/css/app.css
+++ b/NoDecentDiary/wwwroot/css/app.css
@@ -147,3 +147,10 @@ a, .btn-link {
     -webkit-user-select: text;
     user-select: text;
 }
+
+@media screen and (max-width:960px) {
+    .m-toast-container {
+        left: 0px !important;
+        right: 0px !important;
+    }
+}
